FFlag file for Vulkan

--- a/ClientAppSettings.json
+++ b/ClientAppSettings.json
@@ -1,1 +1,1 @@
-{"FFlagDebugGraphicsPreferOpenGL":"true","FFlagDebugGraphicsDisableDirect3D11":"true","FFlagGraphicsGLTextureReduction":"true"}
+{"FFlagDebugGraphicsPreferVulkan":"true","FFlagDebugGraphicsDisableDirect3D11":"true"}
